@@ -2,8 +2,10 @@ package com.example.rabbithell.domain.auth.domain;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import lombok.Getter;
@@ -11,17 +13,17 @@ import lombok.Getter;
 @Getter
 public class AuthUser implements UserDetails {
 
-    private final String userId;
+    private final Long userId;
     private final String role;
 
-    public AuthUser(String userId, String role) {
+    public AuthUser(Long userId, String role) {
         this.userId = userId;
         this.role = role;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 필요 시 권한 리스트 반환
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role));
     }
 
     @Override
@@ -31,7 +33,7 @@ public class AuthUser implements UserDetails {
 
     @Override
     public String getUsername() {
-        return userId;
+        return String.valueOf(userId);
     }
 
     @Override
